--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <div id='react-app'>Loading &hellip;</div>
   </body>
+	<script src='/javascripts/build.js'></script>
 </html>
