--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,5 @@
   <body>
     <div id='react-app'>Loading &hellip;</div>
   </body>
-	<script src='/javascripts/build.js'></script>
+	<script src='http://localhost:8080/javascripts/build.js'></script>
 </html>
